--- a/qmk_firmware/keyboards/keyball/keyball39/keymaps/puzzlemeter/keymap.c.in
+++ b/qmk_firmware/keyboards/keyball/keyball39/keymaps/puzzlemeter/keymap.c.in
@@ -107,14 +107,14 @@ const uint16_t PROGMEM keymaps[][MATRIX_ROWS][MATRIX_COLS] = {
    * |  Z  |   X  |   C  |   V  |   B  |                   |   N  |   M  |  ,<  |  .>  |  /?  |
    * |-----+------+------+------+------+-------|    ,------+------+------+------+------+------|
    * | CMD | Opt  | ctrl |Shift |LOWER |ADJUST |    | Bksp | RAISE|                    |  EN  |
-   * |     |      |      | Esc  |Space | Enter |    |      | Enter|                    |kanji |
+   * |     |      |      | Esc  | Tab  | Space |    |      | Enter|                    |kanji |
    * `-----------------------------------------'    `-----------------------------------------'
    */
   [_QWERTY] = LAYOUT_universal(
         KC_Q,     KC_W,     KC_E,     KC_R,     KC_T,                                              KC_Y,   KC_U,     KC_I,   KC_O,   KC_P,
         KC_A,     KC_S,     KC_D,     KC_F,     KC_G,                                              KC_H,   KC_J,     KC_K,   KC_L, TD(TT_CLN),
         KC_Z,     KC_X,     KC_C,     KC_V,     KC_B,                                              KC_N,   KC_M,  KC_COMM, KC_DOT, KC_SLSH,
-      KC_LGUI, KC_LALT,  KC_LCTL, LSFT_T(KC_ESC),LT(1,KC_SPC),LT(3,KC_ENT),    KC_BSPC, LT(2,KC_ENT),  _______,_______,_______, TD(TD_IME)
+      KC_LGUI, KC_LALT,  KC_LCTL, LSFT_T(KC_ESC),LT(1,KC_TAB),LT(3,KC_SPC),    KC_BSPC, LT(2,KC_ENT),  _______,_______,_______, TD(TD_IME)
   ),
 
   /* Lower
